<resources>
    <string name="app_name">VKFindMe</string>
    <string name="title_activity_main">Find Me</string>
    <string name="text_tab_profile">Profile</string>
    <string name="text_tab_map">Map</string>
    <string name="text_tab_settings">Settings</string>
    <string name="error_title">Error!</string>
    <string name="on_visibility_server_error_message">Server is not available. Can not change visibility state.</string>
    <string name="off_visibility_server_error_message">Server is not available. You will not send a new coordinates, but friends will see your last position, which was sent.</string>
    <string name="refresh_friends_server_error_message">Server is not available. Can not refresh friends list.</string>
    <string name="visibility_true_message">Now you are visible</string>
    <string name="visibility_false_message">Now you are invisible</string>
    <string name="gps_service_on_message">You are visible for your friends</string>
    <string name="ok">Ok</string>
    <string name="alarm_users_title">Alarm participants</string>
    <string name="alarm_updated">The alarm has been updated</string>
    <string name="alarm_accepted">The alarm has been accepted</string>
    <string name="alarm_canceled">The alarm has been canceled</string>
    <string name="alarm_must_select_users_message">You must select alarm participants</string>
    <string name="set_alarm_pos">Set an alarm position</string>
    <string name="set_alarm_radius">Set an alarm radius</string>
    <string name="me_in_alarm">You are the participant of the alarm</string>
    <string name="refresh_friends_is_on">Friends is being refreshed</string>
    <string name="refresh_friends_is_off">Friends refreshing is off</string>
    <string name="alarm">Alarm (click for settings)</string>
    <string name="alarms">Alarms</string>
    <string name="refresh_friends_title">Friends</string>
    <string name="friend_in_alarm">Your friend has reached the alarm</string>
    <string name="is_offline">is offline</string>
    <string name="refresh_friends_message_ok">Friends have been refreshed</string>
    <string name="refresh_friends_message_nok">Can not refresh friends</string>
    <string name="reach_alarm">You have reached the alarm</string>
    <string name="needs_authorization">Authorization is needed</string>
    <string name="location_not_granted">Location needs to be granted</string>
    <string name="server_is_not_accessible">Server is not accessible. Please, try again later.</string>
    <string name="logout">Logout</string>
    <string name="empty_friends_list">Friends list is empty</string>
    <string name="empty_alarms_list">Alarms list is empty</string>
    <integer name="com_vk_sdk_AppId">6108914</integer>

    <string name="friend_refresh_title">Friends refreshing delay</string>
    <string name="friend_refresh_summary">How often to refresh friends positions</string>
    <string-array name="friend_refresh_delays_titles" >
        <item>1 second</item>
        <item>2 seconds</item>
        <item>3 seconds</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>3 minute</item>
        <item>10 minute</item>
    </string-array>
    <string-array name="friend_refresh_delays_values" >
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>5000</item>
        <item>10000</item>
        <item>30000</item>
        <item>60000</item>
        <item>180000</item>
        <item>600000</item>
    </string-array>
    <string name="friend_refresh_default_delay">3000</string>

    <string name="send_pos_title">Send position delay</string>
    <string name="send_pos_summary">How often to send your positions if you are visible</string>
    <string-array name="send_pos_delays_titles" >
        <item>1 second</item>
        <item>2 seconds</item>
        <item>3 seconds</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>3 minute</item>
        <item>10 minute</item>
    </string-array>
    <string-array name="send_pos_delays_values" >
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>5000</item>
        <item>10000</item>
        <item>30000</item>
        <item>60000</item>
        <item>180000</item>
        <item>600000</item>
    </string-array>
    <string name="send_pos_default_delay">3000</string>

    <string name="apply">Apply</string>
    <string name="remove">Remove</string>

    <string name="min_gps_distance_title">Minimum distance between location updates</string>
    <string name="min_gps_distance_summary">Minimum distance between location updates if you are visible</string>
    <string-array name="min_gps_distance_titles" >
        <item>2 meters</item>
        <item>5 meters</item>
        <item>10 meters</item>
        <item>30 meters</item>
        <item>100 meters</item>
        <item>500 meters</item>
        <item>1 kilometer</item>
        <item>3 kilometers</item>
    </string-array>
    <string-array name="min_gps_distance_values" >
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>100</item>
        <item>500</item>
        <item>1000</item>
        <item>3000</item>
    </string-array>
    <string name="min_gps_distance_default">2</string>
    <string name="user_name_format">%s %s</string>
</resources>
