<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:key="refresh_friends_delay"
        android:title="@string/friend_refresh_title"
        android:summary="@string/friend_refresh_summary"
        android:entries="@array/friend_refresh_delays_titles"
        android:entryValues="@array/friend_refresh_delays_values"
        android:defaultValue="@string/friend_refresh_default_delay"/>

    <ListPreference
        android:key="gps_min_delay"
        android:title="@string/send_pos_title"
        android:summary="@string/send_pos_summary"
        android:entries="@array/send_pos_delays_titles"
        android:entryValues="@array/send_pos_delays_values"
        android:defaultValue="@string/send_pos_default_delay"/>

    <ListPreference
        android:key="gps_min_distance"
        android:title="@string/min_gps_distance_title"
        android:summary="@string/min_gps_distance_summary"
        android:entries="@array/min_gps_distance_titles"
        android:entryValues="@array/min_gps_distance_values"
        android:defaultValue="@string/min_gps_distance_default"/>

</PreferenceScreen>