<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tabhost_background">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/tabhost_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_users_title"
            android:textColor="#FFFFFF"
            android:textSize="25sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tabhost_background"
        android:gravity="center">

        <Button
            android:id="@+id/okBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/apply"
            android:background="@drawable/logout_selector" />


        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="center_vertical"
            android:background="#455A64" />

        <Button
            android:id="@+id/nokBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/remove"
            android:background="@drawable/logout_selector" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tabhost_background">

        <ListView
            android:id="@+id/usersList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/tabhost_background">
        </ListView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>

</LinearLayout>